--- a/sections/b.main/1.introduction.tex
+++ b/sections/b.main/1.introduction.tex
@@ -1,19 +1,19 @@
 
-The field of ontologies plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains, such as biology and medicine. The introduction of the Web Ontology Language as a World Wide Web Consortium (W3C) recommendation has further grown the ecosystem and enabled use cases for ontology engineering in the context of the semantic web.
+The field of ontologies plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains, such as medicine and biology. The introduction of the Web Ontology Language as a World Wide Web Consortium (W3C) recommendation has further grown the ecosystem and enabled use cases for ontology engineering in the context of the semantic web.
 
-Ontologies provide a structured and formalized way to represent knowledge about particular domains and facilitate automatic reasoning and sharing knowledge. Nevertheless, the development and maintenance of ontologies is not without challenges. With the growing size and complexity of these ontologies, they also become more susceptible to bugs, and it becomes harder to debug these defects. Furthermore, in the context of the semantic web, automatic approaches to correcting ontologies are needed for the combination of conflicting knowledge derived from independent sources.
+Ontologies provide a structured and formalized way to represent knowledge about particular domains and facilitate automatic reasoning and the sharing of knowledge. Nevertheless, the development and maintenance of ontologies is not without challenges. With the growing size and complexity of ontologies, they also become more susceptible to bugs, and it becomes harder to debug these defects. Furthermore, in the context of the semantic web, automatic approaches to correcting ontologies are needed for the combination of conflicting knowledge derived from independent sources.
 
-The \SROIQ description logic is a very expressive variant of the description logics family, which can serve as the logical basis for representing knowledge in ontologies. It is also the foundation for the Web Ontology Language, a standardized language for representing ontologies on the web, enabling the creation of machine-readable ontologies. In both of these systems, ontologies are sets of axioms, and each axiom is a statement encoding some knowledge about the domain. \SROIQ extends upon basic description logics like \ALC with additional features such as complex role hierarchies, role disjointness axioms, and transitive roles. This expressive power allows for modelling complex domains with rich relationships and constraints. This expressivity, however, comes at the cost of requiring some global restrictions that must be followed to guarantee the decidability of the logic.
+The \SROIQ description logic is a very expressive variant of the description logics family, and can serve as the logical basis for representing knowledge in ontologies. It is also the foundation for the Web Ontology Language, a standardized language for representing ontologies on the web, enabling the creation of machine-readable ontologies. In both of these systems, ontologies are sets of axioms, and each axiom is a statement encoding some knowledge about the domain. \SROIQ extends upon basic description logics like \ALC with additional features such as complex role hierarchies, role disjointness axioms, and transitive roles. This expressive power allows for modelling complex domains with rich relationships and constraints. This expressivity, however, comes at the cost of requiring some global restrictions that must be followed to guarantee the decidability of the logic.
 
 Many approaches to repairing inconsistent ontologies amount to identifying problematic axioms and then removing them (e.g., ~\cite{schlobach2003non,kalyanpur2005debugging,kalyanpur2006repairing,BaPS07}). While this approach is obviously sufficient to ensure that the resulting ontology is consistent, it tends to cause information loss as a secondary effect, as outlined in detail in related works \cite{troquard2018repairing,confalonieri2020towards}. 
 Axiom weakening has been proposed as a solution for fine-grained repair to inconsistent ontologies. In these approaches, the information loss is reduced by weakening the inferential power of an axiom rather than by deleting it entirely \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards}. 
 %
 In \cite{troquard2018repairing}, axiom weakening using refinement operators has been described for \ALC and experimentally evaluated, showing that axiom weakening is able to retain more information than deletion. In \cite{confalonieri2020towards}, axiom weakening is extended to include many aspects of \SROIQ, notably omitting, however, the weakening of RBox axioms.
 
-This thesis aims to explore the topic of ontology repair, focusing specifically on axiom weakening in the \SROIQ description logic and the Web Ontology Language. It extends upon the previous work on axiom weakening in description logics by extending the underlying basic principles to the logic \SROIQ, including the possibility of weakening role inclusion axioms and disjoint role axioms. The thesis examines the challenges and difficulties that arise when applying axiom weakening to these more expressive description logics and covers several scenarios where weakening can affect the regularity of \SROIQ RBoxes. Further, a framework where these problems can be prevented is proposed.
+This thesis aims to explore the topic of ontology repair, focusing specifically on axiom weakening in the \SROIQ description logic and the Web Ontology Language. It extends upon the previous work on axiom weakening in description logics by extending the underlying basic principles to the logic \SROIQ, including the possibility of weakening role inclusion axioms and disjoint role axioms. The thesis examines the challenges and difficulties that arise when applying axiom weakening to these more expressive description logics and covers several scenarios where weakening can affect the global constraints of \SROIQ RBoxes. Further, a framework is proposed in which these problems are avoided.
 
 The implementation of the proposed algorithms will be discussed. Next to a prototype implementation used primarily for running the experimental evaluation, a plugin for the popular ontology editor, Protégé, has been realized. The thesis presents some details of the implementation process and discusses the integration of axiom weakening functionalities into the Protégé tool.
 
-Additionally, by implementing the proposed refinement and weakening operators, it becomes possible to perform experimental evaluation, also on ontologies using the more expressive features of \SROIQ. The quality of repairs achieved through axiom weakening is assessed, and the results reaffirm the findings of \cite{troquard2018repairing} for the case of \SROIQ, namely that weakening may significantly outperform deletion. Additionally, the thesis explores the impact of caching in cover computations and evaluates the performance in terms of reasoner calls and execution time.
+Additionally, by implementing the proposed refinement and axiom weakening operators, it becomes possible to perform experimental evaluation, also on ontologies using the more expressive features of \SROIQ. The quality of repairs achieved through axiom weakening is assessed, and the results reaffirm the findings of \cite{troquard2018repairing} for the case of \SROIQ, namely that weakening may significantly outperform deletion. Additionally, the thesis explores the impact of caching in cover computations and evaluates the general performance in terms of reasoner calls and execution time.
 
 Finally, the thesis concludes with a summary of the findings, their implications, and possible directions for future research. By addressing some of the challenges related to axiom weakening in the \SROIQ description logic, this research aims to contribute to the field of ontology engineering and inspire further research into axiom weakening and ontology repair.
