--- a/sections/b.main/2.background/3.bugs.tex
+++ b/sections/b.main/2.background/3.bugs.tex
@@ -1,5 +1,5 @@
 
-As software systems evolve, it becomes harder to avoid introducing bugs. Similarly, in ontology engineering, bugs can be introduced into an ontology. With the increasing size and complexity of a system, it becomes harder to debug these defects, both for software systems and ontologies.
+As software systems evolve, it becomes harder to avoid the emergence of bugs. Similarly, in ontology engineering, bugs can be introduced into an ontology. With the increasing size and complexity of a system, it also becomes more challenging to debug these defects, both for software systems and ontologies.
 
 \subsection{Categories of Bugs} \label{categories-of-bugs}
 
