--- a/sections/b.main/4.implementation/1.prototype.tex
+++ b/sections/b.main/4.implementation/1.prototype.tex
@@ -32,7 +32,7 @@ To improve performance, particularly for running the test cases, running work in
 
 \subsection{Computing Minimal Subsets}\label{minimal-set-impl}
 
-For some operations, maximal consistent subsets and minimal inconsistent subsets of an ontology $\Omc$ must be computed. As has been observed in \cite{marques2013minimal} for the case of propositional logic, these problems can both be reduced to the problem of finding a minimal subset over some monotone predicate. This is also true for DLs. A predicate $p$ is monotone if for every two sets $A$ and $B$ where $A \subseteq B$, $p(A) \implies p(B)$. Given a monotone predicate $p$ and a set $A$, the problem is to find a subset $J$ of $A$ such that $p(J)$ and for all subsets $J'$ of $J$, $p(J')$ does not hold. The problem of finding a minimal inconsistent subset can trivially be reduced to this problem by setting $A = \Omc_r$ and $p_\textnormal{MIS}(A) \iff \Omc_s \cup A \models \top \sqsubseteq \bot$. Instead of finding the maximal consistent subset, we can find the minimal subset such that removing it from the full ontology results in a consistent ontology. That is, we solve the minimal subset problem over the set $A = \Omc_r$ using the predicate $p_\textnormal{MCS}(A) \iff \Omc_s \cup \Omc_r \setminus A \not\models \top \sqsubseteq \bot$. Removing this minimal subset will yield a maximal consistent subset since adding any other axiom is equivalent to removing fewer axioms, and since the set is minimal, there is no way to remove fewer axioms and still satisfy the predicate.
+For some operations, maximal consistent subsets and minimal inconsistent subsets of an ontology $\Omc$ must be computed. As has been observed in \cite{marques2013minimal} for the case of propositional logic, these problems can both be reduced to the problem of finding a minimal subset over some monotone predicate. This is also true for DLs. A predicate $p$ is monotone if for every two sets $A$ and $B$ where $A \subseteq B$, $p(A) \implies p(B)$. Given a monotone predicate $p$ and a set $A$, the problem is to find a subset $J$ of $A$ such that $p(J)$ and for all subsets $J'$ of $J$, $p(J')$ does not hold. The problem of finding a minimal inconsistent subset can trivially be reduced to this problem by finding the minimal subsets $J$ of $\Omc_r$ that satisfy $\Omc_s \cup J \models \top \sqsubseteq \bot$. Instead of finding the maximal consistent subset, we can find the minimal subset such that removing it from the full ontology results in a consistent ontology. That is, we find the minimal subsets $J$ of $\Omc_r$ such that $\Omc_s \cup \Omc_r \setminus J \not\models \top \sqsubseteq \bot$ holds. Removing this minimal subset from $\Omc$ will yield a maximal consistent subset since adding any other axiom is equivalent to removing fewer axioms, and since the set is minimal, there is no way to remove fewer axioms and still satisfy the predicate.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
